# MangaScraper

./: Makefile  MangaScraper.cabal  README.md  Requests.http  SA.nixwrap  flake.nix  stack.yaml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/tools/syncer/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/tools/syncer/activities/: MainActivity.kt  ScrollingActivity.kt  SyncHomePageActivity.kt
android/app/src/main/java/tools/syncer/infra/: HttpClient.kt
android/app/src/main/java/tools/syncer/repository/: AuthStateRepository.kt
android/app/src/main/java/tools/syncer/services/: SyncerAuthService.kt  SyncerClient.kt
android/app/src/main/java/tools/syncer/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/layout/: activity_scrolling.xml  content_scrolling.xml  image_row.xml
android/app/src/main/res/layout-w1240dp/: content_scrolling.xml
android/app/src/main/res/layout-w936dp/: content_scrolling.xml
android/app/src/main/res/menu/: menu_scrolling.xml
android/app/src/main/res/raw/: auth_config.json
android/app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
android/app/src/test/java/tools/syncer/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
app/: Main.hs
src/: DownloadChapter.hs  Infra.hs  Lib.hs  Manga.hs  Scraper.hs  ScraperData.hs  Utils.hs
