name:                MangaScraper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/MangaScraper#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Scraper
                     , Manga
                     , ScraperData
                     , DownloadChapter
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , servant-server
                     , wai
                     , warp
                     , tagsoup
                     , wreq
                     , HTTP
                     , transformers
                     , conduit
                     , data-default
                     , http-client
                     , http-client-tls
                     , http-types
                     , scalpel
                     , webdriver
                     , bytestring
                     , lens
                     , directory
                     , async
                     , path
                     , uri-encode
                     , ghc
                     , exceptions
                     , lifted-base
                     , transformers-base
                     , monad-control
                     , call-stack
                     , monad-parallel
                     

                     
  default-language:    Haskell2010

executable MangaScraper-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N 
  build-depends:       base
                     , MangaScraper
  default-language:    Haskell2010

test-suite MangaScraper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , MangaScraper
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/MangaScraper
